# eva

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  test_audio_capture.py
configs/agents/: airline_agent.yaml
docs/: experiment_setup.md  external_agent_providers.md  index.html  telephony_bridge.md  telnyx-kimi-metrics-summary.json
docs/assets/: index-B7XxGtG-.js  index-BD-3HzhN.js  index-C9qftpn2.js  index-CbwHEeAV.js  index-DNHH3PHW.js  index-DNsPq0CK.css  index-DQB0D0ks.css  index-DTDc05-z.js  index-DcU8EScs.css
docs/metrics/: README.md
docs/metrics/judge_validation_datasets/: README.md  agent_speech_fidelity.jsonl  conciseness.jsonl  conversation_progression.jsonl  faithfulness.jsonl  key_entity_transcription.jsonl
scripts/: rebuild_audit_from_api.py  run_text_only.py
src/eva/: run_benchmark.py
src/eva/assistant/: bridge_vad_observer.py  server.py  telephony_bridge.py  telnyx_setup.py  tool_webhook.py  tunnel.py
src/eva/assistant/agentic/: audit_log.py  system.py
src/eva/assistant/pipeline/: alm_vllm.py  services.py
src/eva/assistant/services/: llm.py
src/eva/assistant/tools/: airline_tools.py
src/eva/assistant/transports/: __init__.py  call_control.py  package.json  telnyx_webrtc.py  telnyx_webrtc_helper.js
src/eva/metrics/: base.py  processor.py
src/eva/metrics/accuracy/: faithfulness.py
src/eva/metrics/diagnostic/: speakability.py
src/eva/metrics/experience/: conciseness.py  conversation_progression.py
src/eva/models/: config.py
src/eva/orchestrator/: runner.py  worker.py
src/eva/user_simulator/: audio_interface.py  client.py
tests/fixtures/: processor_histories.json
tests/unit/: test_bridge_vad_observer.py  test_telephony_bridge.py  test_tool_webhook.py
tests/unit/assistant/: test_audit_log.py  test_telnyx_setup.py  test_tunnel.py
tests/unit/assistant/transports/: test_call_control.py  test_telnyx_webrtc.py
tests/unit/metrics/: test_conversation_progression.py  test_faithfulness.py  test_processor.py  test_processor_histories.py  test_processor_validation.py
tests/unit/models/: test_config_models.py
tests/unit/orchestrator/: test_runner.py  test_worker.py
website/: README.md  vite.config.ts
website/src/: App.tsx
website/src/components/acknowledgements/: AcknowledgementsSection.tsx
website/src/components/architecture/: ArchitectureDiagram.tsx
website/src/components/hero/: Hero.tsx
website/src/components/layout/: Navbar.tsx
website/src/components/leaderboard/: LeaderboardSection.tsx  MetricHeatmap.tsx  ScatterPlot.tsx  TurnTakingAnalysis.tsx
website/src/components/metrics/: MetricNode.tsx  MetricsExplorer.tsx
website/src/data/: leaderboardData.ts  metricsData.ts
